made the nav position fixed and margin to the blog page so heading would be visible

--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@ body a {
   display:flex;
   align-items: center;
   justify-content: end;
+  text-align: center;
   flex:1;
   margin: 5vw;
 }
@@ -218,7 +219,7 @@ body a {
    background-position:center;
    background-size:cover;
    text-shadow: var(--main-tabcontent-text-shadow);
-  color : var(--main-text-color);
+   color : var(--main-text-color);
    
 }
 
@@ -254,7 +255,11 @@ body a {
 
 /* header code that runs across all pages of the website except the index page  */
 
+
 .nav {
+  position:fixed;
+  top:0;
+  width:100%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -362,6 +367,7 @@ body a {
 /* blog page css  */
 
 .mainpageblog {
+  margin-top: 5.5vw;
   display:flex;
   flex:1;
   background:green;
@@ -429,6 +435,11 @@ body a {
 }
 
 @media screen and (max-width: 966px) {
+
+  .mainpageblog {
+    margin-top: 6vw;
+  }
+
   .headingboxblog {
     flex:1;
   }
@@ -451,6 +462,9 @@ body a {
 }
 
 @media screen and (max-width: 816px) {
+  .mainpageblog {
+    margin-top: 7.5vw;
+  }
 
   .contentboxblog {
     background:PURPLE;
@@ -475,7 +489,9 @@ body a {
 }
 
 @media screen and (max-width: 756px) {
-
+  .mainpageblog {
+    margin-top: 8.5vw;
+  }
   .contentboxblog {
     background:brown;
   }
@@ -501,6 +517,10 @@ body a {
 }
 
 @media screen and (max-width: 424px) {
+
+  .mainpageblog {
+    margin-top: 10.5vw;
+  }
   .contentboxblog {
     background:blue;
   }
